# 42cursus

./: README.md
Libft/: ft_lstadd_front.c  ft_memmove.c  ft_strlen.c  ft_strnstr.c  ft_tolower.c  libft.h
born2beroot/: signature.txt
cub3d/: .clangd  .gitignore  Makefile  README.md  test_all.sh
cub3d/includes/: cub3d.h  cub3d_bonus.h
cub3d/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putchar_fd.c  ft_split.c  (+19 more)
cub3d/playground/docs/demo/: .clangd  CMakeLists.txt  demo  main.cpp  map.cpp  map.hpp
cub3d/playground/docs/demo/.cache/clangd/index/: main.cpp.5DF3856DF8DE61A5.idx
fract-ol/: Makefile
get-next-line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
get_next_line/: EOFtest.c  draft.c  example.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c  implement.txt  main.c  read_test.c  static_test.c  test1.txt  test2.txt
memo/: b2b.md
minishell/: Dockerfile  Makefile  README.md  docker-compose.yml  leak_report.md  main.c
minitalk/: Makefile  client.c  server.c
net_practice/: README.md  level1.json  level10.json  level2.json  level3.json  level4.json  level5.json  level6.json  level8.json  level9.json
philo/: Makefile  main.c  philo
printf/: Makefile  ft_identify_output.c  ft_printf.c  printf.h
push-swap/: Makefile  push_swap  push_swap.c  push_swap.h
(+414 files in other folders)
